--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "mongoose": "^5.12.12",
+    "nodemon": "^2.0.7",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.14.4",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-import": "^0.13.0"
   }
 }
