--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-list-endpoints": "^5.0.0",
     "mongoose": "^5.12.12",
     "nodemon": "^2.0.7",
     "socket.io": "^4.1.2"
